# whois-mcp

./: .gitignore  LICENSE  README.md  env.example  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
src/: auth.ts  config.ts  http.ts  index.ts  main.py  register.ts  server.py  server.ts  types.ts
src/lib/: http.ts  object.ts  prefix.ts  whois-client.ts
src/tools/: auth.ts  rdap-contact.ts  whois.ts
src/tools/arin/: as-set.ts  contact.ts
src/tools/ripe/: as-set.ts  route.ts
src/whois_mcp/: __init__.py  cache.py  config.py  main.py  register.py  server.py
src/whois_mcp/tools/: contact_card.py  expand_as_set.py  validate_route_object.py  whois_query.py
src/whois_mcp/tools/afrinic/: __init__.py  contact_card.py  whois_query.py
src/whois_mcp/tools/apnic/: __init__.py  contact_card.py  whois_query.py
src/whois_mcp/tools/arin/: __init__.py  contact_card.py  expand_as_set.py  validate_route_object.py  whois_query.py
src/whois_mcp/tools/lacnic/: __init__.py  contact_card.py  whois_query.py
src/whois_mcp/tools/ripe/: __init__.py  contact_card.py  expand_as_set.py  validate_route_object.py  whois_query.py
tests/: as-set.test.ts  auth.test.ts  cache.test.ts  config.test.ts  helpers.ts  rdap-contact.test.ts  register.test.ts  ripe-contact.test.ts  route.test.ts  test_smoke.py
tests/fixtures/: arin-net.json  arin-poc-abuse.json  arin-poc-noc.json  ripe-as-set-root.json  ripe-route-search.json
ts/src/: cache.ts  config.ts  deps.ts  index.ts
ts/src/lib/: http.ts  ripe-object.ts
ts/src/tools/: rdap-contact.ts
ts/src/tools/arin/: contact.ts  route.ts
ts/src/tools/ripe/: contact.ts
ts/tests/: arin-contact.test.ts  helpers.ts  rdap-contact.test.ts  register.test.ts  whois.test.ts
ts/tests/fixtures/: arin-poc-abuse.json  arin-poc-tech.json  rdap-apnic-ip.json  ripe-as-set-nested.json
